--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
 								android:inputType="text"/>
 
 						<Button
+								android:id="@+id/btnSearch"
 								android:layout_width="0dp"
 								android:layout_weight="0.3"
 								android:layout_height="wrap_content"
